--- a/css/style.css
+++ b/css/style.css
@@ -1,451 +1,458 @@
 :root {
-    --body-background-color: #ffffff;
-    --slate-color: #434455;
-    --navy-blue-color: #2E2F42;
-    --ocean-color: #404BBF;
-    --iris-color: #4D5AE5;
-    --cloud-color: #F4F4FD;
-    --cornflower-color: #E7E9FC;
-    --light-slate-color: #8E8F99;
-    --green-color: #31D0AA;
+  --body-background-color: #ffffff;
+  --slate-color: #434455;
+  --navy-blue-color: #2e2f42;
+  --ocean-color: #404bbf;
+  --iris-color: #4d5ae5;
+  --cloud-color: #f4f4fd;
+  --cornflower-color: #e7e9fc;
+  --light-slate-color: #8e8f99;
+  --green-color: #31d0aa;
 }
 
 body {
-    font-family: Roboto, sans-serif;
-    color: var(--navy-blue-color);
-    background-color: var(--body-background-color);
+  font-family: 'Roboto', sans-serif;
+  color: var(--navy-blue-color);
+  background-color: var(--body-background-color);
 }
 
 h1,
-h2, 
+h2,
 h3,
 h4,
 p {
-    margin-top: 0;
-    margin-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 ul {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 0;
-    list-style: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style: none;
 }
 
 img {
-    display: block;
+  display: block;
 }
 
 .section {
-    padding-top: 120px;
-    padding-bottom: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 /* Logo */
 .logo-part-one {
-    color: var(--iris-color);
-    font-family: Raleway;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.17;
-    text-transform: uppercase;
-    letter-spacing: 0.03em;
+  color: var(--iris-color);
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
 }
 
 .logo-part-two-header {
-    color: var(--navy-blue-color);
+  color: var(--navy-blue-color);
 }
 
 .logo-part-two-footer {
-    color: var(--cloud-color);
+  color: var(--cloud-color);
 }
 
 .page-header {
-    padding-top: 24px;
-    padding-bottom: 24px;
-    border-bottom: 1px solid var(--cornflower-color);
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid var(--cornflower-color);
 }
 
 /* Navigation */
 .navigation {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .nav-link {
-    font-weight: 500;
-    color: var(--navy-blue-color);
+  font-weight: 500;
+  color: var(--navy-blue-color);
 }
 
 .nav-link-active {
-    color: var(--ocean-color);
+  color: var(--ocean-color);
 }
 
 /* Menu */
 .menu {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .menu-items {
-    display: flex;
-    margin-left: 76px;
+  display: flex;
+  margin-left: 76px;
 }
 
 .contact-link {
-    color: var(--slate-color);
+  color: var(--slate-color);
 }
 
 .contact-items {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .contact-items,
 .menu-items {
-    gap: 40px;
+  gap: 40px;
 }
 
 /* Studio Page Header */
 .studio-page-header {
-    background-color: var(--navy-blue-color);
-    padding-top: 188px;
-    padding-bottom: 188px;
-    max-width: 1440px;
-    margin-left: auto;
-    margin-right: auto;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/studio/people-office.jpg");
+  background-color: var(--navy-blue-color);
+  padding-top: 188px;
+  padding-bottom: 188px;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url('../images/studio/people-office.jpg');
 }
 
 .studio-page-header-content {
-    width: 496px;
-    margin-left: auto;
-    margin-right: auto;
+  width: 496px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .page-header-title {
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    color: var(--body-background-color);
-    text-align: center;
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  color: var(--body-background-color);
+  text-align: center;
 }
 
 /* Footer */
 .page-footer {
-    background-color: var(--navy-blue-color);
-    padding-top: 100px;
-    padding-bottom: 100px;
+  background-color: var(--navy-blue-color);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .footer-descript {
-    color: var(--cornflower-color);
-    margin-top: 16px;
+  color: var(--cornflower-color);
+  margin-top: 16px;
 }
 
 .footer-container {
-    width: 264px;
+  width: 264px;
 }
 
 .footer-wrapper {
-    display: flex;
+  display: flex;
 }
 
 /* Footer Social Container */
 .footer-social-container {
-    margin-left: 120px;
+  margin-left: 120px;
 }
 .footer-social-title {
-    font-weight: 500;
-    letter-spacing: 0.02em;
-    color: var(--body-background-color);
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  color: var(--body-background-color);
 }
 
 .footer-social-link {
-    background-color: rgba(255, 255, 255, 0.1);;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .footer-social-link:hover,
 .footer-social-link:focus {
-    background-color: var(--green-color);
+  background-color: var(--green-color);
 }
 
 /* Links */
 .link {
-    text-decoration: none;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+  text-decoration: none;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .link:hover,
 .link:focus {
-    color: var(--ocean-color);
+  color: var(--ocean-color);
 }
 
 .contacts {
-    font-style: normal;
-    margin-left: auto;
+  font-style: normal;
+  margin-left: auto;
 }
 
 /* Buttons */
 .btn {
-    cursor: pointer;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    border-radius: 4px;
+  cursor: pointer;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border-radius: 4px;
 }
 
 .page-header-btn:hover,
 .page-header-btn:focus {
-    background-color: var(--ocean-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: var(--ocean-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .page-header-btn {
-    font-size: 16px;
-    color: var(--body-background-color);
-    background-color: var(--iris-color);
-    padding: 16px 32px;
-    margin-top: 48px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    border: none;
+  font-size: 16px;
+  color: var(--body-background-color);
+  background-color: var(--iris-color);
+  padding: 16px 32px;
+  margin-top: 48px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border: none;
 }
 
 /* Features Section */
 .features-card-items {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .features-card-item {
-    width: 264px;
+  width: 264px;
 }
 
 .features-card-items,
 .direction-items,
 .team-card-items,
 .filter-items {
-    gap: 24px;
+  gap: 24px;
 }
 
 .thumb {
-    width: 264px;
-    height: 112px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: var(--cloud-color);
-    border-radius: 4px;
-    margin-bottom: 8px;
+  width: 264px;
+  height: 112px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--cloud-color);
+  border-radius: 4px;
+  margin-bottom: 8px;
 }
 
 /* Directions Section - What Are We Doing */
 .directions {
-    padding-bottom: 120px;
+  padding-bottom: 120px;
 }
 
 .direction-items {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 72px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 72px;
 }
 
 .direction-item {
-    gap: 24px;
+  gap: 24px;
 }
 
 /* Our Teams Section */
 .team {
-    background-color: var(--cloud-color);
+  background-color: var(--cloud-color);
 }
 
 .team-card-items {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 72px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 72px;
 }
 
 .team-card-item {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    border-radius: 0px 0px 4px 4px;
-    flex-basis: calc((100% - 3 * 24px) / 4);
-    background-color: var(--body-background-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+  flex-basis: calc((100% - 3 * 24px) / 4);
+  background-color: var(--body-background-color);
 }
 
 /* Social icon */
 .social-items {
-    display: flex;
-    margin-top: 16px;
-    gap: 24px
+  display: flex;
+  margin-top: 16px;
+  gap: 24px;
 }
 
 .social-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
 }
 
 .team-social-link {
-    background-color: var(--iris-color);
+  background-color: var(--iris-color);
 }
 
 .team-social-link:hover,
 .team-social-link:focus {
-    background-color: var(--ocean-color);
+  background-color: var(--ocean-color);
 }
 
 .social-icon {
-    fill: var(--light-slate-color)
+  fill: var(--light-slate-color);
 }
 
 /* Customers */
 .customer-items {
-    display: flex;
-    margin-top: 72px;
-    gap: 24px;
+  display: flex;
+  margin-top: 72px;
+  gap: 24px;
 }
 
 .customer-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 168px;
-    height: 88px;
-    fill: var(--light-slate-color);
-    border: 1px solid var(--light-slate-color);
-    border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 168px;
+  height: 88px;
+  fill: var(--light-slate-color);
+  border: 1px solid var(--light-slate-color);
+  border-radius: 4px;
 }
 
 .customer-link:hover,
 .customer-link:focus {
-    fill: var(--ocean-color);
-    border: 1px solid var(--ocean-color);
+  fill: var(--ocean-color);
+  border: 1px solid var(--ocean-color);
 }
 
 /* Portfolio Section */
 .portfolio {
-    padding-top: 96px;
-    padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 120px;
 }
 
 /* Filter */
 .filter-btn {
-    font-size: 16px;
-    color: var(--iris-color);
-    background-color: var(--cloud-color);
-    border: 1px solid var(--cornflower-color);
-    padding: 12px 24px;
+  font-size: 16px;
+  color: var(--iris-color);
+  background-color: var(--cloud-color);
+  border: 1px solid var(--cornflower-color);
+  padding: 12px 24px;
 }
 
 .filter-btn:hover,
 .filter-btn:focus {
-    color: var(--body-background-color);
-    background-color: var(--ocean-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-color: transparent;
+  color: var(--body-background-color);
+  background-color: var(--ocean-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-color: transparent;
 }
 
 .filter-items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 /* Portfolio Cards */
 
 .portfolio-card-items {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 72px;
-    gap: 48px 24px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 72px;
+  gap: 48px 24px;
 }
 
 .portfolio-card-item {
-    background-color: var(--body-background-color);
-    flex-basis: calc((100% - 2 * 24px) / 3);
+  background-color: var(--body-background-color);
+  flex-basis: calc((100% - 2 * 24px) / 3);
 }
 
 .portfolio-card-link {
-    display: block;
-    width: 100%;
-    height: 100%;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .portfolio-card-link:hover,
 .portfolio-card-link:focus {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-title-link {
-    color: var(--navy-blue-color);
+  color: var(--navy-blue-color);
 }
 
 .portfolio-card-border {
-    border-left: 1px solid var(--cornflower-color);
-    border-right: 1px solid var(--cornflower-color);
-    border-bottom: 1px solid var(--cornflower-color);
+  border-left: 1px solid var(--cornflower-color);
+  border-right: 1px solid var(--cornflower-color);
+  border-bottom: 1px solid var(--cornflower-color);
 }
 
 /* Cards */
 .card-wrapper {
-    padding: 32px 16px;
-    box-shadow: 0px 1px 6px rgb(46 47 66 / 8%);
+  padding: 32px 16px;
+  box-shadow: 0px 1px 6px rgb(46 47 66 / 8%);
 }
 
 .card-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 .card-descript {
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--slate-color);
-    margin-top: 8px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--slate-color);
+  margin-top: 8px;
 }
 
 /* Parts */
 .part-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-align: center;
 }
 
 /* Sergey Korobka - Part hidden */
 .visually-hidden {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 
 /* ========== */
 .container {
-    width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
