--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,13 @@
   --cloud-color: #f4f4fd;
   --cornflower-color: #e7e9fc;
   --light-slate-color: #8e8f99;
-  --green-color: #31d0aa;
+
+  /* ==========NEW CODE========== */
+
+  --footer-social-link-active: #31d0aa;
+  --hover-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  /* ==========NEW CODE========== */
 }
 
 body {
@@ -66,6 +72,30 @@ img {
   border-bottom: 1px solid var(--cornflower-color);
 }
 
+/* Links */
+.link {
+  text-decoration: none;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  transition: color var(--hover-transition);
+}
+
+.link:hover,
+.link:focus {
+  color: var(--ocean-color);
+  transition: color var(--hover-transition);
+}
+
+.link:hover::after,
+.link:focus::after {
+  transition: color var(--hover-transition);
+}
+
+.contacts {
+  font-style: normal;
+  margin-left: auto;
+}
+
 /* Navigation */
 .navigation {
   display: flex;
@@ -75,11 +105,42 @@ img {
 .nav-link {
   font-weight: 500;
   color: var(--navy-blue-color);
+
+  /* ==========NEW CODE========== */
+  position: relative;
+  display: block;
+  transition: color var(--hover-transition);
+  /* ==========NEW CODE========== */
 }
 
 .nav-link-active {
   color: var(--ocean-color);
 }
+
+/* ==========NEW CODE========== */
+.nav-link::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -27px;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--ocean-color);
+}
+
+.nav-link:not(.nav-link-active)::after {
+  opacity: 0;
+  transition: opacity var(--hover-transition);
+}
+
+.nav-link:not(.nav-link-active):hover::after,
+.nav-link:not(.nav-link-active):focus::after {
+  opacity: 1;
+  transition: opacity var(--hover-transition);
+}
+/* ==========NEW CODE========== */
 
 /* Menu */
 .menu {
@@ -94,6 +155,7 @@ img {
 
 .contact-link {
   color: var(--slate-color);
+  transition: color var(--hover-transition);
 }
 
 .contact-items {
@@ -168,28 +230,13 @@ img {
 
 .footer-social-link {
   background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color var(--hover-transition);
 }
 
 .footer-social-link:hover,
 .footer-social-link:focus {
-  background-color: var(--green-color);
-}
-
-/* Links */
-.link {
-  text-decoration: none;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-
-.link:hover,
-.link:focus {
-  color: var(--ocean-color);
-}
-
-.contacts {
-  font-style: normal;
-  margin-left: auto;
+  background-color: var(--footer-social-link-active);
+  transition: background-color var(--hover-transition);
 }
 
 /* Buttons */
@@ -199,12 +246,6 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   border-radius: 4px;
-}
-
-.page-header-btn:hover,
-.page-header-btn:focus {
-  background-color: var(--ocean-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .page-header-btn {
@@ -217,6 +258,16 @@ img {
   margin-right: auto;
   display: block;
   border: none;
+  transition: background-color var(--hover-transition),
+    box-shadow var(--hover-transition);
+}
+
+.page-header-btn:hover,
+.page-header-btn:focus {
+  background-color: var(--ocean-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color var(--hover-transition),
+    box-shadow var(--hover-transition);
 }
 
 /* Features Section */
@@ -299,11 +350,13 @@ img {
 
 .team-social-link {
   background-color: var(--iris-color);
+  transition: background-color var(--hover-transition);
 }
 
 .team-social-link:hover,
 .team-social-link:focus {
   background-color: var(--ocean-color);
+  transition: background-color var(--hover-transition);
 }
 
 .social-icon {
@@ -326,12 +379,14 @@ img {
   fill: var(--light-slate-color);
   border: 1px solid var(--light-slate-color);
   border-radius: 4px;
+  transition: fill var(--hover-transition), border-color var(--hover-transition);
 }
 
 .customer-link:hover,
 .customer-link:focus {
   fill: var(--ocean-color);
-  border: 1px solid var(--ocean-color);
+  border-color: var(--ocean-color);
+  transition: fill var(--hover-transition), border-color var(--hover-transition);
 }
 
 /* Portfolio Section */
@@ -347,6 +402,9 @@ img {
   background-color: var(--cloud-color);
   border: 1px solid var(--cornflower-color);
   padding: 12px 24px;
+  transition: color var(--hover-transition),
+    background-color var(--hover-transition), box-shadow var(--hover-transition),
+    border-color var(--hover-transition);
 }
 
 .filter-btn:hover,
@@ -355,7 +413,10 @@ img {
   background-color: var(--ocean-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-color: transparent;
+  border-color: var(--ocean-color);
+  transition: color var(--hover-transition),
+    background-color var(--hover-transition), box-shadow var(--hover-transition),
+    border-color var(--hover-transition);
 }
 
 .filter-items {
@@ -382,12 +443,14 @@ img {
   display: block;
   width: 100%;
   height: 100%;
+  transition: box-shadow var(--hover-transition);
 }
 
 .portfolio-card-link:hover,
 .portfolio-card-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: box-shadow var(--hover-transition);
 }
 
 .portfolio-title-link {
