--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   /* ==========NEW CODE========== */
 
   --footer-social-link-active: #31d0aa;
-  --hover-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --hover-transition: cubic-bezier(0.4, 0, 0.2, 1);
 
   /* ==========NEW CODE========== */
 }
@@ -77,18 +77,18 @@ img {
   text-decoration: none;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  transition: color var(--hover-transition);
+  transition: color 250ms var(--hover-transition);
 }
 
 .link:hover,
 .link:focus {
   color: var(--ocean-color);
-  transition: color var(--hover-transition);
+  transition: color 250ms var(--hover-transition);
 }
 
 .link:hover::after,
 .link:focus::after {
-  transition: color var(--hover-transition);
+  transition: color 250ms var(--hover-transition);
 }
 
 .contacts {
@@ -109,7 +109,7 @@ img {
   /* ==========NEW CODE========== */
   position: relative;
   display: block;
-  transition: color var(--hover-transition);
+  transition: color 250ms var(--hover-transition);
   /* ==========NEW CODE========== */
 }
 
@@ -132,13 +132,13 @@ img {
 
 .nav-link:not(.nav-link-active)::after {
   opacity: 0;
-  transition: opacity var(--hover-transition);
+  transition: opacity 250ms var(--hover-transition);
 }
 
 .nav-link:not(.nav-link-active):hover::after,
 .nav-link:not(.nav-link-active):focus::after {
   opacity: 1;
-  transition: opacity var(--hover-transition);
+  transition: opacity 250ms var(--hover-transition);
 }
 /* ==========NEW CODE========== */
 
@@ -155,7 +155,7 @@ img {
 
 .contact-link {
   color: var(--slate-color);
-  transition: color var(--hover-transition);
+  transition: color 250ms var(--hover-transition);
 }
 
 .contact-items {
@@ -230,13 +230,13 @@ img {
 
 .footer-social-link {
   background-color: rgba(255, 255, 255, 0.1);
-  transition: background-color var(--hover-transition);
+  transition: background-color 250ms var(--hover-transition);
 }
 
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: var(--footer-social-link-active);
-  transition: background-color var(--hover-transition);
+  transition: background-color 250ms var(--hover-transition);
 }
 
 /* Buttons */
@@ -258,16 +258,16 @@ img {
   margin-right: auto;
   display: block;
   border: none;
-  transition: background-color var(--hover-transition),
-    box-shadow var(--hover-transition);
+  transition: background-color 250ms var(--hover-transition),
+    box-shadow 250ms var(--hover-transition);
 }
 
 .page-header-btn:hover,
 .page-header-btn:focus {
   background-color: var(--ocean-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  transition: background-color var(--hover-transition),
-    box-shadow var(--hover-transition);
+  transition: background-color 250ms var(--hover-transition),
+    box-shadow 250ms var(--hover-transition);
 }
 
 /* Features Section */
@@ -356,7 +356,7 @@ img {
 .team-social-link:hover,
 .team-social-link:focus {
   background-color: var(--ocean-color);
-  transition: background-color var(--hover-transition);
+  transition: background-color 250ms var(--hover-transition);
 }
 
 .social-icon {
@@ -379,18 +379,20 @@ img {
   fill: var(--light-slate-color);
   border: 1px solid var(--light-slate-color);
   border-radius: 4px;
-  transition: fill var(--hover-transition), border-color var(--hover-transition);
+  transition: fill 250ms var(--hover-transition),
+    border-color 250ms var(--hover-transition);
 }
 
 .customer-link:hover,
 .customer-link:focus {
   fill: var(--ocean-color);
   border-color: var(--ocean-color);
-  transition: fill var(--hover-transition), border-color var(--hover-transition);
+  transition: fill 250ms var(--hover-transition),
+    border-color 250ms var(--hover-transition);
 }
 
 /* Portfolio Section */
-.portfolio {
+.portfolio-section {
   padding-top: 96px;
   padding-bottom: 120px;
 }
@@ -402,9 +404,10 @@ img {
   background-color: var(--cloud-color);
   border: 1px solid var(--cornflower-color);
   padding: 12px 24px;
-  transition: color var(--hover-transition),
-    background-color var(--hover-transition), box-shadow var(--hover-transition),
-    border-color var(--hover-transition);
+  transition: color 250ms var(--hover-transition),
+    background-color 250ms var(--hover-transition),
+    box-shadow 250ms var(--hover-transition),
+    border-color 250ms var(--hover-transition);
 }
 
 .filter-btn:hover,
@@ -414,9 +417,10 @@ img {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-color: var(--ocean-color);
-  transition: color var(--hover-transition),
-    background-color var(--hover-transition), box-shadow var(--hover-transition),
-    border-color var(--hover-transition);
+  transition: color 250ms var(--hover-transition),
+    background-color 250ms var(--hover-transition),
+    box-shadow 250ms var(--hover-transition),
+    border-color 250ms var(--hover-transition);
 }
 
 .filter-items {
@@ -443,14 +447,14 @@ img {
   display: block;
   width: 100%;
   height: 100%;
-  transition: box-shadow var(--hover-transition);
+  transition: box-shadow 250ms var(--hover-transition);
 }
 
 .portfolio-card-link:hover,
 .portfolio-card-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  transition: box-shadow var(--hover-transition);
+  transition: box-shadow 250ms var(--hover-transition);
 }
 
 .portfolio-title-link {
@@ -461,6 +465,33 @@ img {
   border-left: 1px solid var(--cornflower-color);
   border-right: 1px solid var(--cornflower-color);
   border-bottom: 1px solid var(--cornflower-color);
+}
+
+.portfolio-card-image-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-card-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--iris-color);
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
+  overflow-y: auto;
+  transform: translate(0, 100%);
+  transition: transform 250ms var(--hover-transition);
+}
+
+.portfolio-card-link:hover .portfolio-card-overlay,
+.portfolio-card-link:focus .portfolio-card-overlay {
+  transform: translate(0, 0);
+}
+
+.portfolio-overlay-text {
+  color: var(--cloud-color);
 }
 
 /* Cards */
