--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
   --footer-social-link-active: #31d0aa;
   --hover-transition: cubic-bezier(0.4, 0, 0.2, 1);
 
+  --modal-background: #fcfcfc;
+
   /* ==========NEW CODE========== */
 }
 
@@ -549,4 +551,31 @@ img {
 
 .text-center {
   text-align: center;
+}
+
+/* ========== MODAL WINDOW ========== */
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 488px;
+  min-height: 575px;
+  background-color: var(--modal-background);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transform: scale(0, 0);
+  transition: transform 250ms var(--hover-transition);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.is-hidden .modal {
+  transform: translate(-50%, -50%) scaleY(0);
 }
