--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ img {
 
 .page-header {
   padding-top: 24px;
-  padding-bottom: 24px;
+  padding-bottom: 23px;
   border-bottom: 1px solid var(--cornflower-color);
 }
 
@@ -107,42 +107,36 @@ img {
 .nav-link {
   font-weight: 500;
   color: var(--navy-blue-color);
-
-  /* ==========NEW CODE========== */
   position: relative;
-  display: block;
   transition: color 250ms var(--hover-transition);
-  /* ==========NEW CODE========== */
 }
 
 .nav-link-active {
   color: var(--ocean-color);
 }
 
-/* ==========NEW CODE========== */
 .nav-link::after {
   content: '';
   position: absolute;
   left: 0;
-  bottom: -27px;
-  display: block;
+  bottom: -28px;
   width: 100%;
   height: 4px;
   border-radius: 2px;
   background-color: var(--ocean-color);
+  
 }
 
 .nav-link:not(.nav-link-active)::after {
-  opacity: 0;
-  transition: opacity 250ms var(--hover-transition);
+  background-color: transparent;
+  transition: background-color 250ms var(--hover-transition);
 }
 
 .nav-link:not(.nav-link-active):hover::after,
 .nav-link:not(.nav-link-active):focus::after {
-  opacity: 1;
-  transition: opacity 250ms var(--hover-transition);
+  background-color: var(--ocean-color);
+  transition: background-color 250ms var(--hover-transition);
 }
-/* ==========NEW CODE========== */
 
 /* Menu */
 .menu {
