--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   /* ==========NEW CODE========== */
 
   --footer-social-link-active: #31d0aa;
-  --hover-transition: cubic-bezier(0.4, 0, 0.2, 1);
+  --hover-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   --modal-background: #fcfcfc;
 
@@ -79,18 +79,12 @@ img {
   text-decoration: none;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  transition: color 250ms var(--hover-transition);
+  transition: color var(--hover-transition);
 }
 
 .link:hover,
 .link:focus {
   color: var(--ocean-color);
-  transition: color 250ms var(--hover-transition);
-}
-
-.link:hover::after,
-.link:focus::after {
-  transition: color 250ms var(--hover-transition);
 }
 
 .contacts {
@@ -108,7 +102,7 @@ img {
   font-weight: 500;
   color: var(--navy-blue-color);
   position: relative;
-  transition: color 250ms var(--hover-transition);
+  transition: color var(--hover-transition);
 }
 
 .nav-link-active {
@@ -116,6 +110,7 @@ img {
 }
 
 .nav-link::after {
+  display: block;
   content: '';
   position: absolute;
   left: 0;
@@ -124,18 +119,18 @@ img {
   height: 4px;
   border-radius: 2px;
   background-color: var(--ocean-color);
-  
+  pointer-events: none;
+  transition: background-color var(--hover-transition);
 }
 
 .nav-link:not(.nav-link-active)::after {
   background-color: transparent;
-  transition: background-color 250ms var(--hover-transition);
 }
 
 .nav-link:not(.nav-link-active):hover::after,
 .nav-link:not(.nav-link-active):focus::after {
   background-color: var(--ocean-color);
-  transition: background-color 250ms var(--hover-transition);
+  transition: background-color var(--hover-transition);
 }
 
 /* Menu */
@@ -151,7 +146,7 @@ img {
 
 .contact-link {
   color: var(--slate-color);
-  transition: color 250ms var(--hover-transition);
+  transition: color var(--hover-transition);
 }
 
 .contact-items {
@@ -226,13 +221,12 @@ img {
 
 .footer-social-link {
   background-color: rgba(255, 255, 255, 0.1);
-  transition: background-color 250ms var(--hover-transition);
+  transition: background-color var(--hover-transition);
 }
 
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: var(--footer-social-link-active);
-  transition: background-color 250ms var(--hover-transition);
 }
 
 /* Buttons */
@@ -254,16 +248,16 @@ img {
   margin-right: auto;
   display: block;
   border: none;
-  transition: background-color 250ms var(--hover-transition),
-    box-shadow 250ms var(--hover-transition);
+  transition: background-color var(--hover-transition),
+    box-shadow var(--hover-transition);
 }
 
 .page-header-btn:hover,
 .page-header-btn:focus {
   background-color: var(--ocean-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  transition: background-color 250ms var(--hover-transition),
-    box-shadow 250ms var(--hover-transition);
+  transition: background-color var(--hover-transition),
+    box-shadow var(--hover-transition);
 }
 
 /* Features Section */
@@ -309,7 +303,7 @@ img {
   gap: 24px;
 }
 
-/* Our Teams Section */
+/* ==================== OUR TEAMS SECTION ==================== */
 .team {
   background-color: var(--cloud-color);
 }
@@ -328,7 +322,7 @@ img {
   background-color: var(--body-background-color);
 }
 
-/* Social icon */
+/* ==================== Social Icons ==================== */
 .social-items {
   display: flex;
   margin-top: 16px;
@@ -352,14 +346,17 @@ img {
 .team-social-link:hover,
 .team-social-link:focus {
   background-color: var(--ocean-color);
-  transition: background-color 250ms var(--hover-transition);
 }
 
 .social-icon {
   fill: var(--light-slate-color);
 }
 
-/* Customers */
+/* ==================== Social Icons ==================== */
+/* ==================== OUR TEAMS SECTION ==================== */
+
+/* ==================== Customers ==================== */
+
 .customer-items {
   display: flex;
   margin-top: 72px;
@@ -375,35 +372,41 @@ img {
   fill: var(--light-slate-color);
   border: 1px solid var(--light-slate-color);
   border-radius: 4px;
-  transition: fill 250ms var(--hover-transition),
-    border-color 250ms var(--hover-transition);
+  transition: border-color var(--hover-transition);
 }
 
 .customer-link:hover,
 .customer-link:focus {
-  fill: var(--ocean-color);
   border-color: var(--ocean-color);
-  transition: fill 250ms var(--hover-transition),
-    border-color 250ms var(--hover-transition);
 }
 
-/* Portfolio Section */
+.customer-icon {
+  transition: fill var(--hover-transition);
+}
+
+.customer-link:hover .customer-icon,
+.customer-link:focus .customer-icon {
+  fill: var(--ocean-color);
+}
+
+/* ==================== Customers ==================== */
+
+/* ==================== PORTFOLIO SECTION ==================== */
 .portfolio-section {
   padding-top: 96px;
   padding-bottom: 120px;
 }
 
-/* Filter */
+/* ==================== Filter ==================== */
 .filter-btn {
   font-size: 16px;
   color: var(--iris-color);
   background-color: var(--cloud-color);
   border: 1px solid var(--cornflower-color);
   padding: 12px 24px;
-  transition: color 250ms var(--hover-transition),
-    background-color 250ms var(--hover-transition),
-    box-shadow 250ms var(--hover-transition),
-    border-color 250ms var(--hover-transition);
+  transition: color var(--hover-transition),
+    background-color var(--hover-transition), box-shadow var(--hover-transition),
+    border-color var(--hover-transition);
 }
 
 .filter-btn:hover,
@@ -413,10 +416,6 @@ img {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-color: var(--ocean-color);
-  transition: color 250ms var(--hover-transition),
-    background-color 250ms var(--hover-transition),
-    box-shadow 250ms var(--hover-transition),
-    border-color 250ms var(--hover-transition);
 }
 
 .filter-items {
@@ -425,7 +424,9 @@ img {
   justify-content: center;
 }
 
-/* Portfolio Cards */
+/* ==================== Filter ==================== */
+
+/* ==================== Portfolio Cards ==================== */
 
 .portfolio-card-items {
   display: flex;
@@ -443,14 +444,13 @@ img {
   display: block;
   width: 100%;
   height: 100%;
-  transition: box-shadow 250ms var(--hover-transition);
+  transition: box-shadow var(--hover-transition);
 }
 
 .portfolio-card-link:hover,
 .portfolio-card-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  transition: box-shadow 250ms var(--hover-transition);
 }
 
 .portfolio-title-link {
@@ -478,7 +478,7 @@ img {
   padding: 40px 32px;
   overflow-y: auto;
   transform: translate(0, 100%);
-  transition: transform 250ms var(--hover-transition);
+  transition: transform var(--hover-transition);
 }
 
 .portfolio-card-link:hover .portfolio-card-overlay,
@@ -489,6 +489,9 @@ img {
 .portfolio-overlay-text {
   color: var(--cloud-color);
 }
+
+/* ==================== Portfolio Cards ==================== */
+/* ==================== PORTFOLIO SECTION ==================== */
 
 /* Cards */
 .card-wrapper {
@@ -547,29 +550,70 @@ img {
   text-align: center;
 }
 
-/* ========== MODAL WINDOW ========== */
-
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  min-width: 488px;
-  min-height: 575px;
-  background-color: var(--modal-background);
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-
-  transform: scale(0, 0);
-  transition: transform 250ms var(--hover-transition);
+/* ==================== MODAL WINDOW ==================== */
+.backdrop {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity var(--hover-transition),
+    visibility var(--hover-transition);
 }
 
-.is-hidden {
+.backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
 
-.is-hidden .modal {
-  transform: translate(-50%, -50%) scaleY(0);
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  height: 576px;
+  background-color: var(--modal-background);
+  border-radius: 4px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: box-shadow var(--hover-transition);
 }
+
+.close-modal-btn {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  background-color: var(--cornflower-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color var(--hover-transition);
+}
+
+.close-modal-btn:hover,
+.close-modal-btn:focus {
+  background-color: var(--ocean-color);
+  border: var(--ocean-color);
+}
+
+.close-modal-btn-icon:hover,
+.close-modal-btn-icon:focus {
+  transition: fill var(--hover-transition);
+}
+
+.close-modal-btn:hover .close-modal-btn-icon,
+.close-modal-btn:focus .close-modal-btn-icon {
+  fill: var(--body-background-color);
+}
+
+/* ==================== MODAL WINDOW ==================== */
